--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,8 @@
+ion-content, ion-list, ion-item, input {
+  --background: white;
+  background: white;
+}
+
 .banner {
   padding-left: 40px;
   padding-right: 40px;
